Promote debts to a first-class feature
